# Version 0.1.1 - 2024-02-25
- [add][minor] Add `output get` and `input get` command.

# Version 0.1.0 - 2024-02-25
- [add][major] Initial release